--- a/CV/English/cv.tex
+++ b/CV/English/cv.tex
@@ -58,6 +58,10 @@
         {Innovation and Transfer Management, Universidad EAN}{Bogotá, Colombia}
 \cvitem{Developing an environmental monitoring system with real-time visualization and prediction for Universidad EAN's research management}
 
+\cvevent{2026}{Junior Programmer}
+        {WhaleDog}{Bogotá, Colombia}
+\cvitem{Full stack development for Edgar Ruiz \#54 Liberal Party senate campaign. Handled deployment, design, DevOps, frontend and backend for \href{https://edgarruiz.vote/}{edgarruiz.vote}}
+
 \cvevent{2025}{Junior Programmer}
         {Freelancer}{}
 \cvitem{Developed a Linux simulation with Geolandspill for crude oil spill modeling for an oil company}
