--- a/CV/Spanish/cv.tex
+++ b/CV/Spanish/cv.tex
@@ -58,6 +58,10 @@
         {Gerencia de Innovación y Transferencia, Universidad EAN}{Bogotá, Colombia}
 \cvitem{Desarrollando un sistema de monitoreo ambiental con visualización y predicción en tiempo real para la gerencia de investigación de la Universidad EAN}
 
+\cvevent{2026}{Programador Junior}
+        {WhaleDog}{Bogotá, Colombia}
+\cvitem{Desarrollo full stack para la campaña al senado de Edgar Ruiz \#54 del partido liberal. Encargado del despliegue, diseño, DevOps, frontend y backend para \href{https://edgarruiz.vote/}{edgarruiz.vote}}
+
 \cvevent{2025}{Programador Junior}
         {Freelancer}{}
 \cvitem{Desarrollé una simulación en Linux con Geolandspill sobre el derrame de crudo para una petrolera}
